# rdkb-CcspAdvSecurity

./: CONTRIBUTING.md  Makefile.am  NOTICE  configure.ac
config/: TR181-AdvSecurity.xml
scripts/: advsec.sh  advsec_cpu_mem_recovery.sh  advsec_log_fp_status.sh  start_adv_security.sh
source/: Makefile.am
source/AdvSecurityDml/: Makefile.am  advsecurity_helpers.c  advsecurity_helpers.h  advsecurity_param.c  advsecurity_param.h  cosa_adv_security_dml.c  cosa_adv_security_dml.h  cosa_adv_security_internal.c  cosa_adv_security_internal.h  cosa_adv_security_webconfig.c  cosa_adv_security_webconfig.h  plugin_main.c  plugin_main.h
source/AdvSecuritySsp/: Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  ssp_messagebus_interface_priv.c
source/test/: CcspAdvSecuritySspTest.cpp  Makefile.am  gtest_main.cpp
source/test/CcspAdvSecurityDmlTest/: CcspAdvSecurityDmlTest.cpp  Makefile.am  gtest_main.cpp
source/test/CcspAdvSecuritySanityTest/: CcspAdvSecuritySanityTest.cpp  Makefile.am  SanityTest.c  SanityTest.h  gtest_main.cpp
source/test/mocks/: cosa_adv_security_internal_mock.h  mock_advsec_internal.cpp  mock_advsec_internal.h
